layout zijkolom breedbeeld; fix zijbalk scrollbar ie;

--- a/htdocs/layout/css/breedbeeld.css
+++ b/htdocs/layout/css/breedbeeld.css
@@ -1,17 +1,42 @@
-
+/** Menu **/
 #main, #menu, #submenu {
 	width: 100%;
 }
-
-#menu {
-	margin: 0;
-}
-
-#submenuitems {
+#submenuitems div {
 	float: left;
-	margin-left: 200px;
+	margin-left: 50px;
 }
 
+/** Zijkolom **/
+html, body, #main, #mainleft, #mainright, #zijkolom {
+	height: 100%;
+}
+#mainleft {
+	border-right: 1px solid #b8b8b8;
+}
+#mainright {
+	//padding-left: 30px;
+}
+#zijkolom {
+	background-color: #F6F6F6;
+	//box-shadow: inset -10px 0 10px -5px #888;
+}
+#zijkolom .block h1 {
+	background-image: url("http://plaetjes.csrdelft.nl/layout/portal-break.png");
+	background-repeat: no-repeat;
+	background-position: bottom left;
+	background-color: transparent;
+	border: none;
+	padding-bottom: 5px;
+	margin-bottom: 5px;
+	font-size: 12px;
+	font-weight: normal;
+}
+#zijkolom .block .item {
+	border: none;
+}
+
+/** Mededelingen **/
 #top3overzicht, #kolomrechts, div.bericht {
 	width: auto !important;
 }
